--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -4,6 +4,7 @@
     // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "configurations": [
+
         {
             "type": "java",
             "name": "Launch Current File",
@@ -28,7 +29,7 @@
     "compounds": [
         {
             "name": "Compund",
-            "configurations": ["Launch GameServer", "Launch GameStarter"]
+            "configurations": ["Launch GameServer", "Launch GameStarter", "Launch GameStarter"]
         }
     ]
 }
