--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -4,7 +4,13 @@
     // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "configurations": [
-
+        {
+            "type": "java",
+            "name": "Launch GameStarter",
+            "request": "launch",
+            "mainClass": "GameStarter",
+            "projectName": "Final-Bomediano210924-Samson215235_1537e793"
+        },
         {
             "type": "java",
             "name": "Launch Current File",
@@ -24,7 +30,7 @@
             "request": "launch",
             "mainClass": "GameStarter",
             "projectName": "Final-Bomediano210924-Samson215235_ca8449c3"
-        },
+        }
     ],
     "compounds": [
         {
